<resources>
    <string name="app_name">WheatherForcast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="egyt">Egypt</string>
    <string name="Sunday">Sunday</string>
    <string name="temp"></string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>


    <string name="header">Weather Forcast </string>
    <string name="setting">Setting</string>
    <string name="searchView">search for location</string>
    <string name="celcsious">Celcsious</string>
    <string name="fehrnehit">Fehrnehit</string>
    <string name="kelvin">Kelvin</string>
    <string name="Ok">Ok</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_houre">Mile/Houre</string>
    <string name="meter">Meter/sec</string>
    <string name="alerts">Alerts</string>
    <string name="favourite">Favourite</string>
    <string name="fav_dialoge_body">Save this location to your favourite:</string>
    <string name="delete_dialoge_body">Do you want to delete this location?</string>
    <string name="Permission_Required">Permission Required</string>
    <string name="Warning">Warning</string>
    <string name="save_location">save as current location</string>
    <string name="windSpeed" />
    <string name="tempdgree" />
    <string name="cloudtv" />
    <string name="ultratv" />
    <string name="pressuretv" />
    <string name="visibilitytv" />
    <string name="countryname" />


</resources>