<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".setting.SettingFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radios_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/nav_setting" />

    <LinearLayout
        android:id="@+id/radios_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971">


        <ImageView
            android:id="@+id/units_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/temp_unit"
         />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="6dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/temp_rad_g"
                android:weightSum="3"
                android:padding="1dp"
                android:checkedButton="@id/celcsious"
                android:background="@color/gray"
                >


                    <RadioButton
                        android:id="@+id/celcsious"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/celcsious" />

                    <RadioButton
                        android:id="@+id/fehrn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/fehrnehit" />

                    <RadioButton
                        android:id="@+id/kelvin"
                        style="@style/ToggleButton"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/kelvin" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/location_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/location_img"
          />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="6dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:weightSum="2"
                android:padding="1dp"
                android:id="@+id/location_rad_g"
                android:checkedButton="@id/gbs_btn"
                android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/map_rad_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/map" />

                    <RadioButton
                        android:id="@+id/gbs_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gps" />

                    />
            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/lang_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/lang_img" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="6dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:background="@color/gray"
                android:weightSum="2"
                android:id="@+id/lang_rad_btn"
                android:checkedButton="@id/en_btn"
                android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/arabic_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/arabic" />

                    <RadioButton
                        android:id="@+id/en_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/english" />


            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/enable_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
           android:src="@drawable/enabe_not_img" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="6dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:background="@color/gray"
                android:weightSum="2"
                android:id="@+id/enable_rad_g"
                android:checkedButton="@id/enable_btn"
                android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/enable_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/enable" />

                    <RadioButton
                        android:id="@+id/disable_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/disable" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/speed_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/wind_speed_unit" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="6dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:background="@color/gray"
                android:weightSum="2"
                android:id="@+id/speed_rad_g"
                android:checkedButton="@id/hour_btn"
                android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/hour_btn"
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mile_houre" />

                    <RadioButton
                        style="@style/ToggleButton"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/m_s_rbtn"
                        android:text="@string/meter" />


            </RadioGroup>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

